--- a/manifest.json
+++ b/manifest.json
@@ -17,10 +17,12 @@
     "128": "icons/icon128.png"
   },
   "permissions": [
-    "storage",
-    "activeTab",
-    "scripting",
-    "contextMenus"
+     "storage",
+     "activeTab",
+     "scripting",
+     "contextMenus",
+     "identity",
+     "downloads"
   ],
   "host_permissions": [
     "<all_urls>"
