--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,9 @@
   ],
   "oauth2": {
     "client_id": "873765379611-13o84t331fnnpotv8hnqi8i8btesh3d1.apps.googleusercontent.com",
-    "scopes": ["https://www.googleapis.com/auth/userinfo.email"]
+    "scopes": [
+      "https://www.googleapis.com/auth/drive.file",
+      "https://www.googleapis.com/auth/userinfo.email"
+    ]
   }
 }
