--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,7 @@
   "description": "A Chrome extension for interacting with the Lockb0x protocol codex.",
   "version": "1.0.0",
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "action": {
     "default_popup": "popup/popup.html",
