--- a/manifest.json
+++ b/manifest.json
@@ -17,15 +17,16 @@
     "128": "icons/icon128.png"
   },
   "permissions": [
-     "storage",
-     "activeTab",
-     "scripting",
-     "contextMenus",
-     "identity",
-     "downloads"
+   "storage",
+   "activeTab",
+   "scripting",
+   "contextMenus",
+   "identity",
+   "downloads",
+   "summarizer"
   ],
   "host_permissions": [
-    "<all_urls>"
+      "<all_urls>"
   ],
   "web_accessible_resources": [
     {
