--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .js"
   },
   "devDependencies": {
+    "eslint": "^9.38.0",
     "jsdom": "^27.0.1",
     "vitest": "^4.0.3"
   },
