--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint": "^9.38.0",
     "jsdom": "^27.0.1",
     "prettier": "^3.6.2",
-    "vitest": "^4.0.3"
+    "vitest": "^4.0.3",
+    "webidl-conversions": "^8.0.0",
+    "whatwg-url": "^15.1.0"
   },
   "dependencies": {
     "dotenv": "^17.2.3"
