--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "vitest": "^4.0.6"
   },
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "jszip": "^3.10.1"
+  "dotenv": "^17.2.3"
   }
 }
